<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_16sdp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_operator"
                style="@style/til_main_ot_sp"
                android:layout_marginTop="0dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_operator">

                <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                    android:id="@+id/et_operator"
                    style="@style/mactp_main_ot_sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tid_consumer_no"
                    style="@style/til_main_ot"
                    android:hint="Mobile No">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/et_main_ot"
                        android:maxLength="20" />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:id="@+id/iv_contact"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:src="@drawable/contact"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_view_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5.0dip"
                    android:text="@string/view_plan"
                    android:textColor="@color/sky_blue"
                    android:textSize="12.0sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_view_offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5.0dip"
                    android:padding="5.0dip"
                    android:text="@string/offers"
                    android:textColor="@color/sky_blue"
                    android:textSize="12.0sp"
                    android:visibility="gone" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tid_ad1"
                style="@style/til_main_ot"
                android:hint="Enter Ad1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/et_main_ot"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tid_ad2"
                style="@style/til_main_ot"
                android:hint="Enter Ad2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/et_main_ot"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tid_ad3"
                style="@style/til_main_ot"
                android:hint="Enter Ad3">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/et_main_ot"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tid_amount"
                style="@style/til_main_ot"
                android:hint="Amount">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/et_main_ot"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_proceed"
                style="@style/btn_main2"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/proceed" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>