<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50.0dip"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5.0dip"
            app:cardElevation="2.0dip"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="20.0dip"
                android:gravity="right"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15.0dip"
                        android:background="@drawable/border_line"
                        android:gravity="center"
                        android:padding="10.0dip"
                        android:text="DTH Recharge"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />
                </LinearLayout>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_oprater_dth"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:popupBackground="@color/spinnerColor"
                    app:ms_enableErrorLabel="false"
                    app:ms_hint="@string/operator" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_view_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5.0dip"
                        android:text="@string/view_plan"
                        android:textColor="@color/sky_blue"
                        android:textSize="12.0sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:textColorHint="@color/editHintColor">

                        <EditText
                            android:id="@+id/edit_account_no_dth"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Account Number"
                            android:inputType="number"
                            android:maxLength="15"
                            android:textColor="@color/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tv_view_offer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5.0dip"
                            android:padding="5.0dip"
                            android:text="@string/offers"
                            android:textColor="@color/sky_blue"
                            android:textSize="12.0sp"
                            android:visibility="gone" />
                        <TextView
                            android:id="@+id/tv_cust_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5.0dip"
                            android:padding="5.0dip"
                            android:text="@string/view_customer_details"
                            android:textColor="@color/sky_blue"
                            android:textSize="12.0sp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.0dip"
                        android:textColorHint="@color/editHintColor">

                        <EditText
                            android:id="@+id/edit_amount_dth"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="Amount"
                            android:inputType="number"
                            android:maxLength="5"
                            android:textColor="@color/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tv_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/green"
                        android:layout_marginStart="5.0dip"
                        android:padding="10dip"
                        android:textColor="@color/whitecolor"
                        android:textSize="12.0sp"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_proceed_dth"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_border"
        android:foreground="?selectableItemBackgroundBorderless"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="Proceed"
            android:textColor="@color/whitecolor"
            android:textSize="18.0dip"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>