<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Prepaid Mobile Recharge"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/border_line"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:gravity="center"/>
            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/editHintColor"
            android:layout_weight=".9">
            <EditText
                android:id="@+id/edit_prepaid_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Prepaid Mobile No"
                android:maxLength="10"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/image_contactlist"
            android:visibility="gone"
            android:src="@drawable/contact"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinner_oprater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            card_view:ms_hint="@string/operator"
            card_view:ms_enableErrorLabel="false"
            android:backgroundTint="@color/colorPrimary"
            android:popupBackground="@color/spinnerColor"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_marginRight="2dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_view_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/view_plan"
                android:textColor="@color/sky_blue"
                android:textSize="12.0sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_view_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5.0dip"
                android:padding="5.0dip"
                android:text="@string/offers"
                android:textColor="@color/sky_blue"
                android:textSize="12.0sp"
                android:visibility="gone" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/editHintColor"
            android:layout_weight=".3"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp">

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Amount"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:maxLength="5"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



    </LinearLayout>

        </androidx.cardview.widget.CardView>

        </ScrollView>

    <LinearLayout
        android:id="@+id/linear_proceed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_border"
        android:foreground="?attr/selectableItemBackgroundBorderless">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Proceed"
            android:textColor="@color/whitecolor"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>